# clrmeta

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  error.rs  lib.rs  metadata.rs  reader.rs  root.rs  signature.rs  stream.rs  writer.rs
src/heaps/: blob.rs  guid.rs  mod.rs  strings.rs  us.rs
src/tables/: coded_index.rs  context.rs  header.rs  mod.rs  rows.rs  table_id.rs
